Fix realartists/shiphub-cocoa#634 Wide comments can cause horizontal scrolling in diff view

--- a/IssueWeb/app/components/diff/comment.css
+++ b/IssueWeb/app/components/diff/comment.css
@@ -26,3 +26,6 @@ div.comment {
   border-right: 1px solid #D6D5D5;
 }
 
+td.comment-cell {
+  max-width: 0;
+}
